# fonfon

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/manual/: mkdocs.yml
docs/specs/: 2026-06-18-check-command-architecture-design.md  2026-06-18-check-command-implementation-plan.md  2026-06-19-setup-command-design.md  2026-06-19-setup-command-implementation-plan.md  2026-06-19-setup-services-design.md  2026-06-19-setup-services-implementation-plan.md  2026-06-20-sdci-dirs-and-deploy-output-design.md  2026-06-20-sdci-dirs-and-deploy-output-implementation-plan.md  2026-06-26-check-traefik-design.md  2026-06-26-check-traefik-implementation-plan.md  2026-06-26-ssh-hardening-design.md  2026-06-26-ssh-hardening-implementation-plan.md  2026-06-26-traefik-service-design.md  2026-06-26-traefik-service-implementation-plan.md  (+1 more)
src/fonfon/: cli.py  (+5 more)
tests/: conftest.py  fakes.py  test_apt.py  test_check.py  test_cli.py  test_cli_check.py  test_cli_setup.py  test_docker_cli.py  test_docker_compose.py  test_docker_service.py  test_dpkg.py  test_fs.py  test_github_keys.py  test_models.py  test_models_setup.py  test_network_service.py  test_os_service.py  test_output.py  test_package_backends.py  test_package_service.py  test_pipx.py  test_run.py  test_sdci.py  test_sdci_paths.py  test_setup.py  test_setup_output.py  test_setup_steps.py  test_ssh_config.py  test_ssh_paths.py  test_streaming.py  test_sudo.py  test_system_probes.py  test_systemctl.py  test_systemd_service.py  test_tailscale.py  test_token.py  test_traefik_config.py  test_traefik_paths.py  test_ui.py  test_users.py  (+1 more)
tools/: check_version_bump.py  debian-dev.sh
(+44 files in other folders)
