[project]
name = "fonfon"
version = "0.1.0"
description = "Opinionated VPS server configurator"
readme = "README.md"
authors = [
    { name = "Jon Trigueiro", email = "joepreludian@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.1",
    "rich>=15.0.0",
]

[project.scripts]
fonfon = "fonfon:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "pre-commit>=4.3.0",
    "pytest>=9.1.0",
    "ruff>=0.14.0",
]

[tool.ruff.lint]
# E: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: flake8-bugbear
select = ["E", "F", "I", "UP", "B"]
